attempt: Test with different Java Options